// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading Snapshots ClassName 1`] = `
<h1
  className="sc-AykKC kFJRLz test"
>
  hei
</h1>
`;

exports[`Heading Snapshots No props 1`] = `
<h1
  className="sc-AykKC kFJRLz"
>
  Hei
</h1>
`;

exports[`Heading Snapshots level 1 1`] = `
<h1
  className="sc-AykKC kFJRLz"
>
  Hei
</h1>
`;

exports[`Heading Snapshots level 2 1`] = `
<h2
  className="sc-AykKD jYtBa-D"
>
  Hei
</h2>
`;

exports[`Heading Snapshots level 3 1`] = `
<h3
  className="sc-AykKE bZWXIY"
>
  Hei
</h3>
`;

exports[`Heading Snapshots level 4 1`] = `
<h4
  className="sc-AykKF cjqfvC"
>
  Hei
</h4>
`;

exports[`Heading Snapshots level 5 1`] = `
<h5
  className="sc-AykKG fOBctt"
>
  Hei
</h5>
`;

exports[`Heading Snapshots level 6 1`] = `
<h6
  className="sc-AykKH jtLZrk"
>
  Hei
</h6>
`;

exports[`Heading Snapshots no Children 1`] = `
<h1
  className="sc-AykKC kFJRLz"
/>
`;
